[tool.poetry]
name = "lider-scraper"
version = "0.1.0"
description = ""
authors = ["zaidejaz <zaidejaz521@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyppeteer = "^2.0.0"
pyppeteer-stealth = "^2.7.4"
pandas = "^2.2.2"
asyncio = "^3.4.3"
undetected-chromedriver = "^3.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
